[package]
name = "tracerbench-recorded-response-server"
version = "0.1.0"
authors = ["Kris Selden <kris.selden@gmail.com>"]
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
base64 = "0.10"
bytes = "0.4"
futures-preview = { version = "0.3.0-alpha.19" }
h2 = { version = "=0.2.0-alpha.3", features = ["unstable-stream", "unstable"]  }
http = "0.1"
log = "0.4"
memmap = "0.7"
ring = "0.16"
serde = "1"
serde_cbor = "0.10"
tokio = "=0.2.0-alpha.6"
tokio-rustls = "0.12.0-alpha"
tracerbench-recorded-response-set = { path = "../recorded-response-set" }
tracerbench-socks-proxy = { path = "../socks-proxy" }
webpki = "0.21"

