[package]
name = "tracerbench-recorded-response-server"
version = "0.1.0"
authors = ["Kris Selden <kris.selden@gmail.com>"]
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
base64 = "0.13.0"
bytes = "1.0.1"
futures = { version = "0.3", features = ["thread-pool"]}
h2 = { version = "0.3" }
http = "0.2.3"
log = "0.4"
memmap = "0.7"
ring = "0.16"
serde = "1"
serde_cbor = "0.11"
tokio = { version = "1.16", features = ["net", "rt"] }
tokio-rustls = "0.22.0"
tracerbench-recorded-response-set = { path = "../recorded-response-set" }
tracerbench-socks-proxy = { path = "../socks-proxy" }
webpki = { version = "0.22", features = ["std"] }
