[package]
name = "tracerbench-recorded-response-set"
version = "0.1.0"
authors = ["Kris Selden <kris.selden@gmail.com>"]
license = "BSD-2-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
http = "0.1"
memmap = "0.7"
serde = "1"
serde_derive = "1"
tracerbench-request-key = { path = "../request-key" }

