[package]
name = "tracerbench-serve"
version = "0.1.0"
authors = ["Kris Selden <kris.selden@gmail.com>"]
license = "BSD-2-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.3.1"
structopt = "0.3"
tokio = { version = "1.8", features = ["full"] }
tracerbench-recorded-response-server = { path = "../recorded-response-server" }
